--- a/.github/workflows/deploy-branch-to-space.yml
+++ b/.github/workflows/deploy-branch-to-space.yml
@@ -22,6 +22,8 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
+        with:
+          ref: ${{ github.event.inputs.branch }}
 
       - name: Install cloudfoundary
         shell: bash
