--- a/rust-api/Cargo.toml
+++ b/rust-api/Cargo.toml
@@ -10,3 +10,6 @@ poem = "1.2.47"
 poem-openapi = { version = "1.2.47", features = ["swagger-ui", "url"] }
 tokio = { version = "1.12.0", features = ["macros", "rt-multi-thread"] }
 tracing-subscriber = "0.2.24"
+sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls", "postgres"] }
+color-eyre = "0.6.0"
+anyhow = "1.0.53"
