--- a/rust-api/docker-compose.yaml
+++ b/rust-api/docker-compose.yaml
@@ -3,7 +3,8 @@ services:
   db:
     image: postgres
     environment:
-      POSTGRES_PASSWORD: example
+      POSTGRES_USERNAME: postgres
+      POSTGRES_PASSWORD: password
     ports:
       - "5432:5432"
     volumes:
