--- a/rust-api/Cargo.toml
+++ b/rust-api/Cargo.toml
@@ -10,7 +10,8 @@ poem = "1.2.47"
 poem-openapi = { version = "1.2.47", features = ["swagger-ui", "url"] }
 tokio = { version = "1.12.0", features = ["macros", "rt-multi-thread"] }
 tracing-subscriber = "0.2.24"
-sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls", "postgres"] }
+sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls", "postgres", "json"] }
 color-eyre = "0.6.0"
 anyhow = "1.0.53"
 dotenv = "0.15.0"
+serde_json = "1.0.79"
