--- a/rust-api/Cargo.toml
+++ b/rust-api/Cargo.toml
@@ -1,17 +1,28 @@
 [package]
+edition = "2021"
 name = "rust-api"
 version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-poem = "1.2.47"
-poem-openapi = { version = "1.2.47", features = ["swagger-ui", "url"] }
-tokio = { version = "1.12.0", features = ["macros", "rt-multi-thread"] }
-tracing-subscriber = "0.2.24"
-sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls", "postgres", "json"] }
+anyhow = "1.0.53"
 color-eyre = "0.6.0"
+dotenv = "0.15.0"
+poem = "1.2.47"
+rand = "*"
+serde_json = "1.0.79"
+tracing = "*"
+tracing-subscriber = "0.2.24"
+
+[dependencies.poem-openapi]
+features = ["swagger-ui", "url"]
+version = "1.2.47"
+
+[dependencies.sqlx]
+features = ["runtime-tokio-native-tls", "postgres", "json"]
+version = "0.5"
+
+[dependencies.tokio]
 anyhow = "1.0.53"
 dotenv = "0.15.0"
+features = ["macros", "rt-multi-thread"]
 serde_json = "1.0.79"
+version = "1.12.0"
