--- a/rust-api/Cargo.toml
+++ b/rust-api/Cargo.toml
@@ -12,6 +12,10 @@ rand = "*"
 serde_json = "1.0.79"
 tracing = "*"
 tracing-subscriber = "0.2.24"
+jwt = "0.15.0"
+sha2 = "0.9"
+hmac = "0.11"
+serde = "1.0.136"
 
 [dependencies.poem-openapi]
 features = ["swagger-ui", "url"]
